<resources>
    <string name="app_name">Kotlin_Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="termandcontion"><![CDATA["I accept T&C . "]]></string>
    <string name="Login">Login</string>
    <string name="readme">remainde me</string>
    <string name="name">Name</string>
    <string name="Signup">Sign_up</string>
    <string name="Dashborad">Dashboard</string>
</resources>